--- a/index.html
+++ b/index.html
@@ -9,6 +9,32 @@
     <title>Document</title>
 </head>
 <body>
+<h1>Hello, change me blue please!</h1>
+
+<div class="red-div">Please turn me red!</div>
+
+<ul>
+    <li>Turn this li to green!</li>
+    <li>Turn this li to pink!</li>
+</ul>
+
+<ul>
+    <li>Turn this li to green!</li>
+    <li>Turn this li to pink!</li>
+</ul>
+
+<div id="brown-div">Turn me brown!</div>
+
+
+<input type="text" id="my-input" placeholder="Some Text!"></input>
+<button id="alert-input">Click Me!</button>
+<ul class="students">
+    <li>Sacha</li>
+</ul>
+
+<input type="text" id="student-input" placeholder="student name"></input>
+
+<button id="add-student">Click Me!</button>
 
 <script src="https://code.jquery.com/jquery-3.2.1.js"></script>
 <script src="main.js"></script>
